<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:textStyle="bold"
        android:textSize="@dimen/size_30sp"
        android:textColor="#041FB3"
        android:gravity="center"
        android:paddingTop="@dimen/size_20sp" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_40sp"
        app:cardCornerRadius="@dimen/size_20dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="@dimen/size_10sp"
            android:hint="@string/enter_name"
            android:background="@android:color/transparent"
            android:id="@+id/etname"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_10sp"
        app:cardCornerRadius="@dimen/size_20dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/enter_email"
            android:padding="@dimen/size_10sp"
            android:background="@android:color/transparent"
            android:id="@+id/etemail"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_10sp"
        app:cardCornerRadius="@dimen/size_20dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/enter_contact"
            android:padding="@dimen/size_10sp"
            android:background="@android:color/transparent"
            android:id="@+id/etcontact"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_10sp"
        app:cardCornerRadius="@dimen/size_20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size_10sp"
            android:backgroundTint="@android:color/transparent"
            android:id="@+id/etpassword"
            android:hint="Enter Password"
            android:inputType="textPassword"
            android:layout_weight="1"
            android:layout_marginEnd="30dp"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#6FD5BFBF"
            android:id="@+id/iveyeclosedPass"
            android:src="@drawable/img"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_10sp"
        app:cardCornerRadius="@dimen/size_20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/size_10sp"
                android:backgroundTint="@android:color/transparent"
                android:id="@+id/etconfpassword"
                android:hint="Enter Password"
                android:inputType="textPassword"
                android:layout_weight="1"
                android:layout_marginEnd="30dp"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="#6FD5BFBF"
                android:id="@+id/iveyeclosedconf"
                android:src="@drawable/img"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_40sp"
        android:backgroundTint="#041FB3"
        android:text="@string/register"
        android:id="@+id/btnregister"/>

</LinearLayout>